# insh

./: .envrc  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  truth.yaml
.github/workflows/: rust.yaml
common/: Cargo.toml
common/src/: args.rs  lib.rs  paths.rs
db-api/: Cargo.toml
db-api/src/: lib.rs
db-client/: Cargo.toml
db-client/model-macro/: Cargo.toml
db-client/model-macro/src/: field_attr_args.rs  lib.rs
db-client/src/: client.rs  field.rs  field_spec.rs  lib.rs  model_trait.rs
db-client/src/fields/: datetime.rs  mod.rs  str.rs  u16.rs  u32.rs  u64.rs  u8.rs
file-info/: Cargo.toml
file-info/src/: lib.rs
file-type/: Cargo.toml
file-type/src/: lib.rs
insh/: Cargo.toml
insh-api/: Cargo.toml
insh-api/src/: lib.rs
insh/src/: ansi_escaped_text.rs  args.rs  auto_completer.rs  clipboard.rs  color.rs  config.rs  current_dir.rs  data.rs  main.rs  requester.rs  response_handler.rs
insh/src/auto_completers/: mod.rs  search_completer.rs
insh/src/components/: insh.rs
insh/src/components/browser/: browser.rs  contents.rs  mod.rs
insh/src/components/common/: dir.rs  directory.rs  mod.rs  phrase.rs
insh/src/components/file_creator/: file_creator.rs  mod.rs
insh/src/components/finder/: contents.rs  finder.rs  mod.rs
insh/src/components/searcher/: contents.rs  mod.rs  searcher.rs
insh/src/programs/: bash.rs  vim.rs
insh/src/string/: mod.rs
inshd/: CHANGELOG.md  Cargo.toml
inshd/src/: args.rs  client.rs  client_handler.rs  client_handler_handle.rs  client_handler_monitor.rs  client_request.rs  conn_handler.rs  disconnected_client.rs  file_finder.rs  logging.rs  main.rs  models.rs  paths.rs  request_handler.rs  request_handler_died.rs  request_handler_manager.rs  response_handler.rs  scheduler.rs  server.rs  signal_handler.rs  stop.rs
notes/: logging.md  release_process.md
path-finder/: Cargo.toml
path-finder/src/: lib.rs
phrase-searcher/: Cargo.toml
phrase-searcher/src/: lib.rs
rend/: Cargo.toml
rend/src/: lib.rs  location.rs  renderer.rs  yarn.rs
scripts/: all  all.sh  build  build.sh  check  check-with-logging-feature  check.sh  docs.sh  fix  format.sh  install  install.sh  lint  lint-arbsego  lint.sh  release  release.sh  run.sh
size/src/: lib.rs
src/: action.rs  ansi_escaped_text.rs  app.rs  args.rs  ascii.rs  bash_shell.rs  clipboard.rs  color.rs  component.rs  config.rs  current_dir.rs  data.rs  effect.rs  finder.rs  insh.rs  logging.rs  main.rs  path_finder.rs  phrase_searcher.rs  program.rs  searcher.rs  state.rs  stateful.rs  system_effect.rs  terminal_size.rs  vim.rs  walker.rs
src/auto_completers/: search_completer.rs
src/components/: insh.rs  mod.rs
src/components/browse/: browse.rs  contents.rs  directory.rs  mod.rs
src/components/browser/: browser.rs  contents.rs
src/components/common/: directory.rs  mod.rs  phrase.rs  prompt.rs
src/components/file_creator/: file_creator.rs  mod.rs
src/components/finder/: contents.rs  directory.rs  finder.rs  found.rs  mod.rs  phrase.rs
src/components/searcher/: contents.rs  searcher.rs
src/misc/: align.rs
src/programs/: bash.rs  mod.rs  vim.rs
src/rendering/: fabric.rs  location.rs  mod.rs  renderer.rs  size.rs  yarn.rs
src/rendering/renderables/: join_and_wrap.rs  mod.rs  vertically_centered.rs
src/string/: mod.rs  pad.rs
term/: Cargo.toml
term/src/: event.rs  lib.rs  term.rs
til/: Cargo.toml
til/src/: app.rs  component.rs  event.rs  lib.rs  output_forwarder.rs  paths.rs  program.rs  program_monitor.rs  requester.rs  response_handler.rs  stopper.rs  system_effect.rs  term_event_forwarder.rs
