[package]
name = "insh"
version = "0.3.9"
edition = "2021"

[dependencies]
crossterm = "0.23.0"
regex = "1.5.4"
clap = { version = "3.2.17", features = ["derive"] }
dirs = "4.0.0"
unicode-segmentation = "1.9.0"
itertools = "0.10.3"
walkdir = "2.3.2"
copypasta = "0.8.1"  # Used to manage the clipboard.

[dev-dependencies]
test-case = "2.0.0"
