[package]
name = "db-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Used for generating the builder pattern for structs.
typed-builder = "0.14.0"

# Used for serialization and deserialization of data structures.
serde = { version = "1.0.144", features = ["derive"] }

# Used for globally unique identifiers.
uuid = { version = "1.3.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }

