[package]
name = "insh-api"
version = "0.1.0"
edition = "2021"

[dependencies]
path-finder = { version = "0.1.0", path = "../path-finder" }

# Used for generating the builder pattern for structs.
typed-builder = "0.14.0"

# Used for serialization and deserialization of data structures.
serde = { version = "1.0.144", features = ["derive"] }

# Used for globally unique identifiers.
uuid = { version = "1.3.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
