[package]
name = "rend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
size = { version = "0.1.0", path = "../size" }
crossterm = "0.23.0"

itertools = "0.10.3"

[dev-dependencies]
test-case = "3.1.0"
