[package]
name = "til"
version = "0.1.0"
edition = "2021"

[features]
# Explicitly, the default features are none.
default = []

# The logging feature enables logging which is helpful for development.
logging = [
    "dep:log",
]

[dependencies]
rend = { version = "0.1.0", path = "../rend" }
term = { version = "0.1.0", path = "../term" }

crossterm = {version = "0.23.0", features = ["serde"]}
serde = { version = "1.0.144", features = ["derive"] }

# Used for generating the builder pattern for structs.
typed-builder = "0.14.0"

# Used for logging. (Only included if the logging features is enabled.)
log = { version = "0.4.17", optional = true }

# Used for globally unique identifiers.
uuid = { version = "1.3.1", features = ["v4", "fast-rng", "macro-diagnostics"] }

# Used for declaring lazily evaluated static values.
lazy_static = "1.4.0"

# Used for determining platform-specific directories.
dirs = "4.0.0"

# Provides friendly bindings for *nix platform APIs.
#
# Used for:
#   - sinding terminal resizes to programs.
nix = "0.26.2"

# Used for running programs.
subprocess = "0.2.9"

# Used for concurrent programming.
crossbeam = "0.8.2"
